# mlif

./: Cargo.toml
src/: entity.rs  lib.rs
src/codegen/: construct_lowering.rs  emit.rs  link.rs  lower.rs  lowering_ctx.rs  mod.rs  types.rs
src/diagnostic/: diagnostic.rs  handler.rs  mod.rs
src/ir/: attributes.rs  block.rs  builder.rs  context.rs  dialect.rs  location.rs  mod.rs  module.rs  operation.rs  region.rs  symbol_table.rs  types.rs  value.rs
src/pass/: external.rs  manager.rs  mod.rs  pass.rs
src/sema/: mod.rs  step.rs
src/transform/: mod.rs  rewrite.rs  walk.rs
src/verify/: mod.rs  traits.rs  verifier.rs
tests/: ir_core.rs
