[package]
name = "mlif"
version = "0.1.0"
edition = "2021"
description = "Multi-Level IR Framework — lightweight compiler infrastructure targeting Cranelift"

[features]
default = []
codegen = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-module",
    "cranelift-object",
    "target-lexicon",
]

[dependencies]
cranelift-codegen = { version = "0.113", optional = true }
cranelift-frontend = { version = "0.113", optional = true }
cranelift-module = { version = "0.113", optional = true }
cranelift-object = { version = "0.113", optional = true }
target-lexicon = { version = "0.12", optional = true }
