[package]
name = "mlif"
version = "0.1.0"
edition = "2021"
description = "Multi-Level IR Framework — lightweight compiler infrastructure targeting Cranelift"

[features]
default = []
codegen = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-module",
    "cranelift-object",
    "target-lexicon",
]

[dependencies]
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-object = { workspace = true, optional = true }
target-lexicon = { workspace = true, optional = true }
